--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# CV Screening Application
+### CV Screening Application
 
 ## Description
 This CV Screening Application is a web-based tool designed to assist in the automated screening of job applicants' CVs against specific job descriptions. It leverages advanced NLP techniques to evaluate and score CVs based on their relevance to the job requirements.
